--- a/templates/CRM/parts/navbar.html
+++ b/templates/CRM/parts/navbar.html
@@ -51,22 +51,19 @@
                                 </div>
                             </div>
                         </a>
-                        {% if request.user.person.employee is not None %}
-                            <a class="dropdown-item mt-2">
-                                Gerer Mes Comptes
-                            </a>
-                        {% else %}
-                            <a class="dropdown-item mt-2">
-                                Gerer Mes Comptes
-                            </a>
-                        {% endif %}
-                        <a class="dropdown-item">
-                            Paramétres Compte
+                        <a href="/" class="dropdown-item mt-2">
+                            <i class="fas fa-users-cog"></i>&nbsp;&nbsp;Gerer Mes Comptes
+                        </a>
+                        <a href="{% url 'crm:reset_password' %}" class="dropdown-item">
+                            <i class="fas fa-unlock"></i>&nbsp;&nbsp;Changer Mot De Passe
+                        </a>
+                        <a href="{% url 'crm:account_settings' %}" class="dropdown-item">
+                            <i class="fas fa-user-cog"></i>&nbsp;&nbsp;Paramétres Du Compte
                         </a>
                         <form method="POST" action="{% url 'crm:logout' %}">
                             {% csrf_token %}
                             <button type="submit" class="dropdown-item" style="cursor: pointer">
-                                <i class="fas fa-sign-out-alt"></i> Se Déconnecter
+                                <i class="fas fa-sign-out-alt"></i>&nbsp;&nbsp;Se Déconnecter
                             </button>
                         </form>
                     </div>
