FIX FORM ISSUES

--- a/templates/CRM/account-settings.html
+++ b/templates/CRM/account-settings.html
@@ -190,7 +190,7 @@
                                         </div>
 
                                         <button type="submit" class="btn btn-success mr-2">
-                                            <span class="mdi mdi-account-check"></span> Effectuer
+                                            <span class="mdi mdi-account-check"></span> Sauvegrader
                                         </button>
                                     </form>
 
