--- a/templates/CRM/deposits.html
+++ b/templates/CRM/deposits.html
@@ -1,7 +1,7 @@
 {% extends 'CRM/base.html' %}
 {% load widget_tweaks %}
 
-{% block title %}Versements{% endblock %}
+{% block title %}Virements{% endblock %}
 
 {% block content %}
     <div class="main-panel">
@@ -11,7 +11,7 @@
                     <div class="card">
                         <div class="card-body row">
                             <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-12">
-                                <h4 class="card-title">Liste des versements</h4>
+                                <h4 class="card-title">Liste des Virements</h4>
                             </div>
 
                             <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-12">
@@ -69,7 +69,7 @@
                                         <tr>
                                             <td colspan="5">
                                                 <div class="alert alert-info text-center font-weight-bold">
-                                                    <span class="mdi mdi-alert-box"></span> Aucun Versement n'a été
+                                                    <span class="mdi mdi-alert-box"></span> Aucun Virement n'a été
                                                     éffectué
                                                 </div>
                                             </td>
