--- a/templates/CRM/password-reset.html
+++ b/templates/CRM/password-reset.html
@@ -19,7 +19,7 @@
                                         <i class="fas fa-unlock-alt"></i> Changement du mot de passe
                                     </p>
 
-                                    <form method="POST" action="{% url 'crm:reset_password' %}"
+                                    <form method="POST" action="{% url 'crm:password_reset' %}"
                                           enctype="multipart/form-data">
 
                                         {% csrf_token %}
@@ -33,13 +33,13 @@
                                                   <i class="mdi mdi-shield-outline text-white"></i>
                                                 </span>
                                                 </div>
-                                                {% if reset_password_form.old_password.errors %}
-                                                    {% render_field reset_password_form.old_password class='form-control is-invalid' %}
+                                                {% if password_reset_form.old_password.errors %}
+                                                    {% render_field password_reset_form.old_password class='form-control is-invalid' %}
                                                 {% else %}
-                                                    {% render_field reset_password_form.old_password %}
+                                                    {% render_field password_reset_form.old_password %}
                                                 {% endif %}
                                             </div>
-                                            {% for error in reset_password_form.old_password.errors %}
+                                            {% for error in password_reset_form.old_password.errors %}
                                                 <small class="form-text text-danger font-weight-bold">
                                                     <i class="fas fa-exclamation-triangle"></i> {{ error }}<br>
                                                 </small>
@@ -55,13 +55,13 @@
                                                   <i class="mdi mdi-shield-outline text-white"></i>
                                                 </span>
                                                 </div>
-                                                {% if reset_password_form.new_password.errors %}
-                                                    {% render_field reset_password_form.new_password class='form-control is-invalid' %}
+                                                {% if password_reset_form.new_password.errors %}
+                                                    {% render_field password_reset_form.new_password class='form-control is-invalid' %}
                                                 {% else %}
-                                                    {% render_field reset_password_form.new_password %}
+                                                    {% render_field password_reset_form.new_password %}
                                                 {% endif %}
                                             </div>
-                                            {% for error in reset_password_form.new_password.errors %}
+                                            {% for error in password_reset_form.new_password.errors %}
                                                 <small class="form-text text-danger font-weight-bold">
                                                     <i class="fas fa-exclamation-triangle"></i> {{ error }}<br>
                                                 </small>
@@ -77,13 +77,13 @@
                                                   <i class="mdi mdi-shield-outline text-white"></i>
                                                 </span>
                                                 </div>
-                                                {% if reset_password_form.confirm_new_password.errors %}
-                                                    {% render_field reset_password_form.confirm_new_password class='form-control is-invalid' %}
+                                                {% if password_reset_form.confirm_new_password.errors %}
+                                                    {% render_field password_reset_form.confirm_new_password class='form-control is-invalid' %}
                                                 {% else %}
-                                                    {% render_field reset_password_form.confirm_new_password %}
+                                                    {% render_field password_reset_form.confirm_new_password %}
                                                 {% endif %}
                                             </div>
-                                            {% for error in reset_password_form.confirm_new_password.errors %}
+                                            {% for error in password_reset_form.confirm_new_password.errors %}
                                                 <small class="form-text text-danger font-weight-bold">
                                                     <i class="fas fa-exclamation-triangle"></i> {{ error }}<br>
                                                 </small>
