--- a/templates/CRM/base.html
+++ b/templates/CRM/base.html
@@ -51,9 +51,9 @@
                         <div class="container-fluid clearfix">
             <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © 2018
               <a href="{% url 'crm:home' %}" target="_blank">GL Bank</a>. Tous les droits sont reservés.</span>
-                            <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">HAYTHAM DAHRI
+                            <a href="https://www.linkedin.com/in/haytham-dahri-645795155/" target="_blank"><span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">HAYTHAM DAHRI
               <i class="mdi mdi-heart text-danger"></i>
-            </span>
+                            </span></a>
                         </div>
                     </footer>
                     <!-- partial -->
