--- a/templates/CRM/parts/navbar.html
+++ b/templates/CRM/parts/navbar.html
@@ -5,23 +5,19 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
         <div class="text-center navbar-brand-wrapper d-flex align-items-top justify-content-center">
-            <a class="navbar-brand brand-logo" href="index.html">
+            <a class="navbar-brand brand-logo" href="{% url 'crm:home' %}">
                 <img src="{% static 'CRM/images/logo.svg' %}" alt="logo"/>
             </a>
-            <a class="navbar-brand brand-logo-mini" href="index.html">
+            <a class="navbar-brand brand-logo-mini" href="{% url 'crm:home' %}">
                 <img src="{% static 'CRM/images/logo-mini.svg' %}" alt="logo"/>
             </a>
         </div>
         <div class="navbar-menu-wrapper d-flex align-items-center">
             <ul class="navbar-nav navbar-nav-left header-links d-none d-md-flex">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Schedule
-                        <span class="badge badge-primary ml-1">New</span>
+                    <a href="{% url 'crm:home' %}" class="nav-link font-weight-bold">
+                        <i class="fa fa-home mr-2"></i>Acceuil
                     </a>
-                </li>
-                <li class="nav-item active">
-                    <a href="#" class="nav-link">
-                        <i class="mdi mdi-elevation-rise"></i>Reports</a>
                 </li>
                 {% if client is not None %}
                     <li class="nav-item">
@@ -51,10 +47,10 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/" class="dropdown-item mt-2">
+                        <a href="{% url 'crm:accounts' %}" class="dropdown-item mt-2">
                             <i class="fas fa-users-cog"></i>&nbsp;&nbsp;Gerer Mes Comptes
                         </a>
-                        <a href="{% url 'crm:reset_password' %}" class="dropdown-item">
+                        <a href="{% url 'crm:password_reset' %}" class="dropdown-item">
                             <i class="fas fa-unlock"></i>&nbsp;&nbsp;Changer Mot De Passe
                         </a>
                         <a href="{% url 'crm:account_settings' %}" class="dropdown-item">
