--- a/templates/CRM/parts/sidebar.html
+++ b/templates/CRM/parts/sidebar.html
@@ -41,7 +41,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'crm:deposits' %}">
                     <i class="menu-icon mdi mdi-plus-outline"></i>
-                    <span class="menu-title">Versements</span>
+                    <span class="menu-title">Virement</span>
                 </a>
             </li>
         {% else %}
