--- a/templates/CRM/login.html
+++ b/templates/CRM/login.html
@@ -16,16 +16,13 @@
                         </div>
                         <ul class="auth-footer">
                             <li>
-                                <a href="#">Conditions</a>
+                                <a href="https://www.linkedin.com/in/haytham-dahri-645795155/" target="_blank">Linkedin</a>
                             </li>
                             <li>
-                                <a href="#">Help</a>
-                            </li>
-                            <li>
-                                <a href="#">Terms</a>
+                                <a href="https://web.facebook.com/Haytham.dahri" target="_blank">Facebook</a>
                             </li>
                         </ul>
-                        <p class="footer-text text-center">copyright © 2018 Bootstrapdash. All rights reserved.</p>
+                        <p class="footer-text text-center">Tous les droits sont reservés © 2019 HAYTHAM DAHRI.</p>
                     </div>
                 </div>
             </div>
