--- a/templates/CRM/parts/sidebar.html
+++ b/templates/CRM/parts/sidebar.html
@@ -52,15 +52,9 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'crm:withdrawals' %}">
-                    <i class="menu-icon mdi mdi-minus-box-outline"></i>
-                    <span class="menu-title">Retraits</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'crm:deposits' %}">
-                    <i class="menu-icon mdi mdi-plus-outline"></i>
-                    <span class="menu-title">Versements</span>
+                <a class="nav-link" href="{% url 'crm:clients_accounts' %}">
+                    <i class="menu-icon mdi mdi-account-box-outline"></i>
+                    <span class="menu-title">Comptes Clients</span>
                 </a>
             </li>
         {% endif %}
